# somnyx-tui

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
src/: app.rs  data.rs  main.rs  ui.rs
